--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
             <div class="maindiv">
-                <h1>Simple Interest Calculator</h1>
+                <h1>Web App – Simple Interest Calculator</h1>
 
                 
                 Amount <input type="number" id="principal" value=0>
