--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 
                 Amount <input type="number" id="principal" value=0>
                 <br/>
-                Rate <input type="range" onchange="updateRate()"  id="rate" min="1" max="20" step="0.25" value="default_val">  
+                Rate <input type="range" onchange="updateRate()"  id="rate" min="1" max="20" step="0.25">  
                 <span id="rate_val">
                     10.25%
                 </span>
